--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   <main class="main">
     <div class="practice">
       <h2>Practice</h2>
+      <app-practice></app-practice>
     </div>
     <div class="content">
       <div class="left-side">
