--- a/src/app/features/practice/practice.component.html
+++ b/src/app/features/practice/practice.component.html
@@ -1,1 +1,12 @@
-<p>practice works!</p>
+<p>Practice works!</p>
+
+<h2>Conditions</h2>
+
+<div class="part">
+  <app-conditional-stuff></app-conditional-stuff>
+</div>
+
+<h2>Templates</h2>
+<div class="part">
+  <app-template-stuff></app-template-stuff>
+</div>
