--- a/src/app/features/practice/practice.component.html
+++ b/src/app/features/practice/practice.component.html
@@ -1,5 +1,3 @@
-<p>Practice works!</p>
-
 <h2>Conditions</h2>
 
 <div class="part">
@@ -9,4 +7,15 @@
 <h2>Templates</h2>
 <div class="part">
   <app-template-stuff></app-template-stuff>
+</div>
+
+<h2>Life cycle hooks</h2>
+<div class="part">
+  <input type="text" [(ngModel)]="someTestName" />
+
+  <p>{{ showTestChild }}</p>
+
+  <app-test-lc *ngIf="showTestChild" [inputData]="someTestName"></app-test-lc>
+
+  <button type="button" (click)="toggleTestChild()">Toggle</button>
 </div>
