--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,18 +4,7 @@
 
   <!-- Main content -->
   <main class="main">
-    <div class="practice">
-      <h2>Practice</h2>
-      <app-practice></app-practice>
-    </div>
-    <div class="content">
-      <div class="left-side">
-        <h2>User list</h2>
-      </div>
-      <div class="right-side">
-        <h2>Todo list</h2>
-      </div>
-    </div>
+    <router-outlet></router-outlet>
   </main>
 
   <!-- Footer -->
