--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<div class="header">
+  <div>App</div>
+  <div class="menu">
+    <div>
+      <a routerLink="todo" routerLinkActive="active">Todo</a>
+    </div>
+    <div>
+      <a routerLink="list" routerLinkActive="active"
+        >User List ({{ userDataCount }})</a
+      >
+    </div>
+    <div>
+      <a routerLink="practice" routerLinkActive="active">Practice</a>
+    </div>
+  </div>
+</div>
