--- a/src/app/features/practice/practice.component.html
+++ b/src/app/features/practice/practice.component.html
@@ -1,4 +1,15 @@
-<h2>Conditions</h2>
+<h2>This is practice component</h2>
+
+<nav>
+  <ul>
+    <li><a routerLink="conditional">Conditional</a></li>
+    <li><a routerLink="template">Templates</a></li>
+  </ul>
+</nav>
+
+<router-outlet></router-outlet>
+
+<!-- <h2>Conditions</h2>
 
 <div class="part">
   <app-conditional-stuff></app-conditional-stuff>
@@ -18,4 +29,4 @@
   <app-test-lc *ngIf="showTestChild" [inputData]="someTestName"></app-test-lc>
 
   <button type="button" (click)="toggleTestChild()">Toggle</button>
-</div>
+</div> -->
