--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,12 +8,13 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  margin: 2rem;
 
-  > * {
-    flex: 1;
-    border: 1px solid gray;
-    padding: 5px;
-  }
+  // > * {
+  //   flex: 1;
+  //   border: 1px solid gray;
+  //   padding: 5px;
+  // }
 }
 
 .content {
