--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div>App</div>
   <div class="menu">
     <div>
-      <a routerLink="todo" routerLinkActive="active">Todo</a>
+      <a routerLink="todo" routerLinkActive="active">Todo({{ todoCount }})</a>
     </div>
     <div>
       <a routerLink="list" routerLinkActive="active"
