--- a/src/app/features/practice/practice.component.html
+++ b/src/app/features/practice/practice.component.html
@@ -4,29 +4,8 @@
   <ul>
     <li><a routerLink="conditional">Conditional</a></li>
     <li><a routerLink="template">Templates</a></li>
+    <li><a routerLink="observables">Observables</a></li>
   </ul>
 </nav>
 
 <router-outlet></router-outlet>
-
-<!-- <h2>Conditions</h2>
-
-<div class="part">
-  <app-conditional-stuff></app-conditional-stuff>
-</div>
-
-<h2>Templates</h2>
-<div class="part">
-  <app-template-stuff></app-template-stuff>
-</div>
-
-<h2>Life cycle hooks</h2>
-<div class="part">
-  <input type="text" [(ngModel)]="someTestName" />
-
-  <p>{{ showTestChild }}</p>
-
-  <app-test-lc *ngIf="showTestChild" [inputData]="someTestName"></app-test-lc>
-
-  <button type="button" (click)="toggleTestChild()">Toggle</button>
-</div> -->
